--- a/ej_arrays/style.css
+++ b/ej_arrays/style.css
@@ -1,11 +1,24 @@
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-repeat: no-repeat;
+    height:100vw;
+}
+
 img {
-    height: 10%;
-    width: 5%;
+    height: 10rem;
+    width: 100px;
+    object-fit: cover;
     margin: 1%;
 }
 
-.BTodaBar {
+.form {
     position: absolute;
+
+}
+
+.BTodaBar {
+    position: inherit;
+    
 
 }
 
@@ -18,6 +31,7 @@ img {
 #random {
     position: inherit;
     left: 35%;
+
 }
 
 #aleat {
@@ -30,4 +44,10 @@ img {
     left: 35%;
     width: 50vw;
     
+    
+}
+
+.cartas {
+    position: absolute;
+    margin:5%;
 }
