--- a/ej_capcha/css/style.css
+++ b/ej_capcha/css/style.css
@@ -24,4 +24,41 @@ body {
 
 .submit {
     margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.result {
+    position:absolute;
+    display: inline-block;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+@keyframes animationP {
+    0% {
+        transform: skew(0,0);
+    }
+    25% {
+        transform: skew(30deg, 20deg);
+    }
+    75%{
+        transform: skew(-30deg, -20deg);
+    }
+    100%{
+        transform: skew(0,0);
+    }
+}
+
+.result  p {
+    color: aliceblue;
+    font-size: 25px;
+    animation: animationP 6s infinite;
+
+
+}
+
+.img2 {
+    margin-top: 15px;
 }
